# instrumental-counter

./: .gitignore  CMakeLists.txt  LICENSE  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  counterapp.cxx
lib/: CMakeLists.txt  counter.cxx  counter.hxx  counter_private.cxx  counter_private.hxx
tests/: CMakeLists.txt  countertest.cxx
